# logcplus

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: logcplus.h
test/: loggertest.cpp  testsfixture.h
